# Plumber

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  mypy.ini  pack.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_trace.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support-request.md
.github/workflows/: build.yml  copilot-setup-steps.yml  release.yml
io_import_vmf/: __init__.py  cube2equi.py  import_agr.py  import_mdl.py  import_qc.py  import_vmf.py  import_vmt.py  import_vtf.py  utils.py
plumber/: __init__.py  addon.py  benchmark.py  blender_manifest.toml  plumber.pyi  preferences.py  tools.py
plumber/api/: README.md  __init__.py  exceptions.py  filesystem.py  games.py  importer.py
plumber/asset/: __init__.py  brush.py  light.py  material.py  model.py  overlay.py  prop.py  sky_camera.py  sky_equi.py  unknown_entity.py  utils.py
plumber/importer/: __init__.py  mdl.py  vmf.py  vmt.py  vtf.py
src/: api.rs  filesystem.rs  importer.rs  lib.rs
src/asset/: brush.rs  entities.rs  mod.rs  model.rs  overlay.rs  sky.rs  utils.rs
src/asset/material/: builder.rs  builder_base.rs  definitions.rs  mod.rs  nodes.rs
