[package]
name = "plumber"
version = "1.0.0-beta4"
authors = ["Lassi Säike"]
edition = "2021"

[lib]
name = "plumber"
crate-type = ["cdylib"]

[dependencies]
plumber_core = { git = "https://github.com/lasa01/plumber_core" }
pyo3 = { version = "0.15.1", features = [
    "extension-module",
    "abi3",
    "abi3-py36",
] }
crossbeam-channel = "0.5.1"
ndarray = "0.15.1"
itertools = "0.10.1"
image = { version = "0.24.6", default-features = false, features = [
    "tga",
    "openexr",
    "png",
] }
glam = "0.20.2"
tracing = { version = "0.1.37", features = ["max_level_debug"] }
rgb = "0.8.31"
float-ord = "0.3.2"
tracing-subscriber = "0.3.17"
tracing-tracy = { version = "0.10.2", optional = true }

[patch.crates-io]
serde = { git = "https://github.com/lasa01/serde", branch = "case-insensitive-attr" }
serde_derive = { git = "https://github.com/lasa01/serde", branch = "case-insensitive-attr" }

[profile.release]
strip = "debuginfo"

[profile.trace]
inherits = "release"
debug = true
strip = "none"

[features]
default = ["normal_logging"]
normal_logging = ["tracing/release_max_level_info"]
trace = ["tracing-tracy", "tracing/release_max_level_debug"]
